<resources>
    <string name="app_name">SoftKapp</string>
    <string name="button_hu_2">Ir HU_2</string>
    <string name="button_hu_3">Ir HU_3</string>
    <string name="button_hu_4">Ir HU_4</string>
    <string name="city">Ciudad:</string>
    <string name="name">Nombre:</string>
    <string name="last_name">Apellido:</string>
    <string name="sex">Sexo:</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="user_name">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="confirm">Confirmar datos</string>
    <string name="hu01_msg">Hola estoy en la HU1</string>
    <string name="name_invalid">Ingrese el nombre</string>
    <string name="login">Iniciar sesión</string>
    <string name="mandatory_data_login">El nombre de usuario y contraseña son obligatorios</string>
    <string name="banner_title">Bienvenidos</string>
    <string name="tab_uno">Tab 1</string>
    <string name="tab_dos">Tab 2</string>
    <string name="tab_tres">Tab 3</string>
    <string name="button_hu_5">Ir HU_5</string>
    <string-array name="ciudades">
        <item>Seleccione</item>
        <item>Armenia</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Barranquilla</item>
    </string-array>
</resources>
